# turing-publications

./: README.md  pyproject.toml
data/: core_filtered_response_data.csv  datacite_extracted_data.csv  datacite_sample.json
notebooks/: datacite_data.ipynb
src/: core_api.py  datacite2csv.py  datacite_api.py
